Issue #47 Fix notices not visibly separate

--- a/source/main/resources/style.css
+++ b/source/main/resources/style.css
@@ -11,6 +11,8 @@
 	/* Program colors */
 	-ex-background-text: rgba( 241, 241, 241, 0.2 );
 	-ex-background-tabs: rgba( 241, 241, 241, 0.4 );
+	-ex-background-tags: rgba( 241, 241, 241, 0.6 );
+	-ex-background-note: rgba( 241, 241, 241, 0.8 );
 }
 
 .splashscreen-progress {
@@ -170,15 +172,20 @@
 
 .notice {
 	-fx-background-color: -ex-background-text;
-	-fx-pref-width: 8cm;
+	-fx-background-insets: 1.5mm;
+	-fx-padding: 3mm;
+}
+
+.notice-hover {
+	-fx-background-color: -ex-background-note;
+	-fx-pref-width: 6cm;
+	-fx-background-radius: 1.5mm 0 0 1.5mm;
+	-fx-background-insets: 1.5mm 0 1.5mm 1.5mm;
+	-fx-padding: 3mm;
 }
 
 .notice-title {
 	-fx-font-weight: bold;
-}
-
-.notice-buttons {
-	-fx-background-color: -ex-background-text;
 }
 
 .notice-message {
